--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "axios": "^0.27.2",
     "cheerio": "^1.0.0-rc.10",
     "cors": "^2.8.5",
+    "cyrillic-to-translit-js": "^3.2.1",
     "easyvk": "^2.8.2",
     "express": "^4.18.1",
+    "node-fetch": "^2.6.7",
     "puppeteer": "^15.5.0",
     "request": "^2.88.2",
     "translate": "^1.4.1"
