--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "cyrillic-to-translit-js": "^3.2.1",
     "easyvk": "^2.8.2",
     "express": "^4.18.1",
+    "mysql": "^2.18.1",
     "node-fetch": "^2.6.7",
     "puppeteer": "^15.5.0",
     "request": "^2.88.2",
