--- a/package.json
+++ b/package.json
@@ -11,14 +11,17 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^0.27.2",
+    "body-parser": "^1.20.1",
     "cheerio": "^1.0.0-rc.10",
     "cors": "^2.8.5",
     "cyrillic-to-translit-js": "^3.2.1",
     "express": "^4.18.1",
     "express-ws": "^5.0.2",
+    "multer": "^1.4.5-lts.1",
     "mysql": "^2.18.1",
     "node-fetch": "^2.6.7",
     "request": "^2.88.2",
+    "uuid": "^9.0.0",
     "ws": "^8.9.0"
   },
   "devDependencies": {
