--- a/package.json
+++ b/package.json
@@ -11,16 +11,22 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^0.27.2",
+    "bcrypt": "^5.1.0",
     "body-parser": "^1.20.1",
     "cheerio": "^1.0.0-rc.10",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "cyrillic-to-translit-js": "^3.2.1",
+    "dotenv": "^16.0.3",
     "express": "^4.18.1",
     "express-ws": "^5.0.2",
+    "jsonwebtoken": "^9.0.0",
     "multer": "^1.4.5-lts.1",
     "mysql": "^2.18.1",
     "node-fetch": "^2.6.7",
     "os": "^0.1.2",
+    "passport": "^0.6.0",
+    "passport-jwt": "^4.0.1",
     "request": "^2.88.2",
     "uuid": "^9.0.0",
     "ws": "^8.9.0"
