--- a/.env
+++ b/.env
@@ -2,10 +2,10 @@
 PORT = 8080
 
 # db
-HOST = localhost
-USER = root
-PASSWORD = 
-DATABASE = legfootball
+HOST = us-cdbr-east-06.cleardb.net
+USER = bd14a7adddd695
+PASSWORD = 5f15d743
+DATABASE = heroku_b56d656850e7f03
 
 # JWT secret key
 JWT_KEY = secretkey
