--- a/.env
+++ b/.env
@@ -2,10 +2,10 @@
 PORT = 8080
 
 # db
-HOST = us-cdbr-east-06.cleardb.net
-USER = bd14a7adddd695
-PASSWORD = 5f15d743
-DATABASE = heroku_b56d656850e7f03
+HOST = eu-cdbr-west-03.cleardb.net
+USER = b1a5e28228bfd4
+PASSWORD = d233d8e6
+DATABASE = heroku_82794a552b59558
 
 # JWT secret key
 JWT_KEY = secretkey
