--- a/.env
+++ b/.env
@@ -2,10 +2,15 @@
 PORT = 8080
 
 # db
-HOST = eu-cdbr-west-03.cleardb.net
-USER = b1a5e28228bfd4
-PASSWORD = d233d8e6
-DATABASE = heroku_82794a552b59558
+# HOST = eu-cdbr-west-03.cleardb.net
+# USER = b1a5e28228bfd4
+# PASSWORD = d233d8e6
+# DATABASE = heroku_82794a552b59558
+
+HOST = localhost
+USER = root
+PASSWORD = 
+DATABASE = legfootball
 
 # JWT secret key
 JWT_KEY = secretkey
