--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
     "request": "^2.88.2",
+    "socket.io": "^4.6.1",
     "uuid": "^9.0.0",
     "ws": "^8.9.0"
   },
