--- a/.env
+++ b/.env
@@ -2,10 +2,10 @@
 PORT = 8080
 
 # db
-# HOST = localhost
-# USER = id19915970_murrayyimanych
-# PASSWORD = lvQ2txc%\G<@dQbA
-# DATABASE = id19915970_legfootball
+# HOST = sql7.freesqldatabase.com
+# USER = sql7631778
+# PASSWORD = DzhD1PnUdJ
+# DATABASE = sql7631778
 
 HOST = localhost
 USER = root
